chore(shared-kernel): extract literals to constants and add serialVersionUID (Sonar fixes)