@@ -8,7 +8,9 @@ import cl.smartlogistic.shared.exception.DomainException;
  */
 public final class InvalidRutException extends DomainException {
 
+    private static final String MESSAGE_TEMPLATE = "RUT invalido '%s': %s";
+
     public InvalidRutException(String rutOriginal, String razon) {
-        super("RUT invalido '%s': %s".formatted(rutOriginal, razon));
+        super(String.format(MESSAGE_TEMPLATE, rutOriginal, razon));
     }
 }
